<resources>
    <string name="app_name">Taxi Sharing</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Sign In</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet</string>

    <string name="welcome">Bienvenu</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_show_available_cars">ShowAvailableCars</string>
    <string name="order_taxi">Commander un taxi</string>
    <string name="your_location">Vous etes ici,</string>
    <string name="available_car">Choisissez une voiture</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="signin">Se connecter</string>
    <string name="connect">Connectez</string>
    <string name="firstname">Nom</string>
    <string name="lastname">Prenom</string>
    <string name="phonenumber">No. Telephone</string>
    <string name="email">Addresse electronique</string>
    <string name="forgot_account">Compte oublie? Creer un</string>
    <string name="signup">Submit</string>
    <string name="create">Creer</string>
    <string name="create_account">Creation de compte</string>
    <string name="car_make">Car Make</string>
    <string name="car_model">Car Model</string>
    <string name="number_plate">Number plate</string>
    <string name="number_of_seats">Number of seats</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>