<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment"
    android:background="@drawable/main_background"
    android:padding="10sp">

            <RelativeLayout
                android:id="@+id/rl_signup_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:textColor="#211E1E"
                    android:textSize="25sp"
                    android:fontFamily="sans-serif-light"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15sp"
                android:background="@drawable/input_container_bg"
                android:layout_marginTop="20sp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    style="@style/Theme.TaxiSharing.EditText"
                    android:background="@drawable/signup_input_bg"
                    android:layout_alignParentTop="true" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    style="@style/Theme.TaxiSharing.EditText"
                    android:background="@drawable/signup_input_bg"
                    android:layout_below="@id/et_username"/>

                <EditText
                    android:id="@+id/et_fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/firstname"
                    style="@style/Theme.TaxiSharing.EditText"
                    android:background="@drawable/signup_input_bg"
                    android:layout_below="@id/et_password"/>

                <EditText
                    android:id="@+id/et_lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastname"
                    style="@style/Theme.TaxiSharing.EditText"
                    android:background="@drawable/signup_input_bg"
                    android:layout_below="@id/et_fname"/>

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    style="@style/Theme.TaxiSharing.EditText"
                    android:background="@drawable/signup_input_bg"
                    android:layout_below="@id/et_lname"/>

                <EditText
                    android:id="@+id/et_phonenumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phonenumber"
                    style="@style/Theme.TaxiSharing.EditText"
                    android:background="@drawable/signup_input_bg"
                    android:layout_below="@id/et_email"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create"
                    android:background="@drawable/button_bg"
                    android:textColor="#fff"
                    android:layout_below="@id/et_phonenumber"
                    android:layout_marginTop="30sp"
                    android:minHeight="0sp"
                    android:padding="8sp"/>

        </RelativeLayout>

</RelativeLayout>