<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:padding="10sp">

    <RelativeLayout
        android:id="@+id/rl_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/tv_signin_title"
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:textColor="#2B2A29"
            android:layout_marginBottom="30sp"
            android:textSize="25sp"
            android:fontFamily="sans-serif-light"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_container_bg"
            android:padding="15sp"
            android:layout_below="@id/tv_signin_title">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:hint="@string/username"
                android:inputType="text"
                android:textColorHint="#8E8E8E"
                android:textColor="#4E4E4E"
                style="@style/Theme.TaxiSharing.EditText"
                android:background="@drawable/signup_input_bg"
                android:layout_marginBottom="15sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_username"
                android:hint="@string/password"
                android:textColorHint="#8E8E8E"
                android:textColor="#4E4E4E"
                style="@style/Theme.TaxiSharing.EditText"
                android:background="@drawable/signup_input_bg"
                android:inputType="textPassword" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connect"
                android:layout_below="@id/et_password"
                android:layout_marginTop="40sp"
                android:background="@drawable/button_bg"
                android:textColor="#FFFFFF"
                android:minHeight="0sp"
                android:padding="8sp"
                android:fontFamily="sans-serif-thin"/>

        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_account"
        android:layout_below="@id/rl_signin"
        android:textColor="#000"
        android:fontFamily="sans-serif-light"
        android:layout_marginTop="20sp"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>